# kopt

./: readme.md
examples/spso_batch_drone_interception/: CMakeLists.txt  Description of the example.md  spso_batch_drone_interception.cu
examples/spso_batch_polynomials/: CMakeLists.txt  Description of the example.md  spso_batch_polynomials.cu
src/ext/krand/: LICENSE  license.md  readme.md
src/ext/krand/examples/generate_random_numbers/: CMakeLists.txt  main.cu
src/ext/krand/src/krand/core/: krand.h
src/ext/krand/src/krand/device/cuda/: pcg.cu  pcg.h
src/kopt/core/: kopt.h
src/kopt/device/cuda/optimizers/: spso_batched.h  spso_helpers.h
src/kopt/device/cuda/util/: reduce_minimum.h
